 * changed fixnums from 64 bit to 54 bit (53 bits + 1 sign bit)
 * changed internal-time-units-per-second to integer

 * added the global variables "most-positive-fixnum" and "most-negative-fixnum"
 * added the special operators catch, throw and unwind-protect
 * added functionp
 * added simple-string-p
 * added vector support:
   * make-array, vector, vector-length, vectorp, adjustable-array-p, vector-push-extend
   * simple-vector-p, svref, svset and svlength
   * list->simple-vector and simple-vector->list
 * added bitvector support:
   * simple-bit-vector-p, sbvref (similar to CL sbit), sbvset, sbvlength and sbv=
   * list->simple-bit-vector and simple-bit-vector->list
 * added writable strings
   * sref (identical to CL char), sset
 * added seqref, seqset
   seqref is similar to CL elt, seqset is similar to CL (setf elt)

 * mlib: added sbit
 * mlib: added map, dovector, revappend, nreconc, nreverse, typecase
 * mlib: added generator related functions and macros
   * scan
   * scan-multiple, scan-concat
   * dogenerator
 * mlib: setf now supports strings, e.g.: (setf (char str) #\a)

 * fixed backquote expansion:
   e.g. `(a ,nil) was eval'd to (a); correct expansion is (a nil)
 * fixed compiled jmethod
 * fixed mlib: avoid possible stackoverflows when using larger sequences
   * mapcar, maplist, mapc, mapl, mapcan, mapcon
   * nconc, remove, remove-if, reduce
 * fixed mlib: fixed notevery, notany


Changes in JMurmel-1.2.2 relative to JMurmel-1.2.1

 * macroexpansion is no longer done on-the-fly but in a seperate macroexpansion phase.
   This fixes issues with macros being expanded that are actually defined later,
   or expanding the wrong version of a macro that is defined more than once.


Changes in JMurmel-1.2.1 relative to JMurmel-1.2

 * changed the interpreter to expand macros only once
 * changed the compiler so that the restriction "The list containing optional arguments cannot be used
   as an argument to `rplacd`." no longer exists
