@@ -1,8 +1,4 @@
 
-ARRAY-DIMENSION-LIMIT einbauen
-
-
-
 JMurmel> (list->simple-vector '(1 2 3))
 ==> #(1 2 3)
 JMurmel> (apply vector '(1 2 3))
